--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-create-thumbnail",
+  "name": "@react-native-oh-tpl/react-native-create-thumbnail",
   "title": "React Native Create Thumbnail",
-  "version": "2.0.0",
+  "version": "2.0.0-0.0.1",
   "description": "iOS/Android thumbnail generator with support for both local and remote videos",
   "main": "index.js",
   "repository": {
@@ -12,6 +12,14 @@
   "keywords": [
     "react-native"
   ],
+  "harmony":{
+    "alias":"react-native-create-thumbnail",
+    "codegenConfig": {
+      "specPaths": [
+        "./src"
+      ]
+    }
+   },
   "author": {
     "name": "Souvik Ghosh",
     "email": "emailtosvk@gmail.com"
@@ -20,6 +28,7 @@
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react-native": ">=0.59.0"
+    "react-native": ">=0.59.0",
+	"react-native-create-thumbnail": "2.0.0"
   }
 }
